--- a/Project.toml
+++ b/Project.toml
@@ -1,15 +1,1 @@
-[deps]
-CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
-Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
-Chairmarks = "0ca39b1e-fe0b-4e98-acfc-b1656634c4de"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
-Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
-LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
-Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
-PkgPage = "e7214860-93a8-4f22-b43d-bd447d1a2094"
-Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
-PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
-Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67"
-Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
-Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
+[deps] CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba" Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc" Chairmarks = "0ca39b1e-fe0b-4e98-acfc-b1656634c4de" DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0" Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6" Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306" LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890" Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0" PkgPage = "e7214860-93a8-4f22-b43d-bd447d1a2094" Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588" PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720" Strided = "5e0ebb24-38b0-5f93-81fe-25c709ecae67" Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb" Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
